Fix #21908: Add Persona configuration per User